[gd_scene load_steps=7 format=4 uid="uid://b45fuuofoxp56"]

[ext_resource type="Material" uid="uid://devha7y7lg7ha" path="res://Models/BunkerDoor.tres" id="1_7hew7"]
[ext_resource type="Script" uid="uid://5f3u8dxuhtks" path="res://Scripts/bunker_open_close.gd" id="2_xxrj8"]

[sub_resource type="ArrayMesh" id="ArrayMesh_sp2aa"]
_surfaces = [{
"aabb": AABB(-0.44075006, -1.9443692, -0.32521665, 4.785729, 4.641788, 0.650433),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"name": "BunkerDoor",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_83nlr"]
resource_name = "level_Cube_014"
_surfaces = [{
"aabb": AABB(-0.44075006, -1.9443692, -0.32521665, 4.785729, 4.641788, 0.650433),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v3RMU5DslRJJdEwSSeyVU5D/X/9//5//P/+f/3//X/8/05OjjXpPWEvTk1hLek+jjf8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": ExtResource("1_7hew7"),
"name": "BunkerDoor",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAAAAP////8AAAAAAAD//wAAAAD//wAAAAAAAP//AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP//AIAAAP////8AgP///////wCAAAAAAP//AIAAAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f///3////9/////f////3+qKqoqqiqqKqoqqiqqKqoq/3////9/////f////3///wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_sp2aa")

[sub_resource type="BoxShape3D" id="BoxShape3D_fevyy"]
size = Vector3(11.891602, 5.7890625, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_fevyy"]
radius = 55.0

[node name="Bunker" type="Node3D"]
transform = Transform3D(-0.6949433, 0, 0.71906453, 0, 1, 0, -0.71906453, 0, -0.6949433, -66.16959, 2.204692, 79.21107)

[node name="BunkerDoor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.0467458, 0, -1.1920929e-07)
mesh = SubResource("ArrayMesh_83nlr")
skeleton = NodePath("")
metadata/extras = {
"M3": {}
}

[node name="BunkerDoor2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.381351, 0, 0)

[node name="BunkerDoorMesh" type="MeshInstance3D" parent="BunkerDoor2"]
transform = Transform3D(-0.99999994, 0, 0.00039622188, 0, 1, 0, -0.00039622188, 0, -0.99999994, -0.85295486, 0.0003080368, 0.0017547607)
mesh = SubResource("ArrayMesh_83nlr")
skeleton = NodePath("")
metadata/extras = {
"M3": {}
}

[node name="StaticBody3DInvisible" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5681076, -2.1471283, 0.716774)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3DInvisible"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3945313, -0.14178845)
shape = SubResource("BoxShape3D_fevyy")

[node name="BigArea3D" type="Area3D" parent="."]
transform = Transform3D(-0.6949433, 0, -0.71906453, 0, 1, 0, 0.71906453, 0, -0.6949433, 0, 0, 0)
collision_mask = 2
script = ExtResource("2_xxrj8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BigArea3D"]
shape = SubResource("SphereShape3D_fevyy")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1920929e-07, 0, -4.50019)
light_color = Color(1, 1, 0.38039216, 1)
light_energy = 8.197
shadow_enabled = true
omni_range = 111.028
omni_attenuation = 1.12

[connection signal="body_entered" from="BigArea3D" to="BigArea3D" method="_on_body_entered"]
[connection signal="body_exited" from="BigArea3D" to="BigArea3D" method="_on_body_exited"]
